--- a/Models/E2E/2024.08.20_SSL-TTS.md
+++ b/Models/E2E/2024.08.20_SSL-TTS.md
@@ -24,8 +24,8 @@
   - [Scholar](https://scholar.google.com/scholar?cluster=)
 - 标签:
   - ?
-- 页数: ?
-- 引用: ?
+- 页数: 5
+- 引用: 38
 - 被引: ?
 - 数据:
   - ? 
@@ -50,18 +50,18 @@
 
 ## 1.Introduction: 引言
 
-> Neural text-to-speech (TTS) synthesis has advanced significantly in recent years, achieving a level of naturalness comparable to human speech and allowing for an increasingly expressive range of outputs \cite{tan2021survey, vits, shen2024naturalspeech, styletts2}.
+> Neural text-to-speech (TTS) synthesis has advanced significantly in recent years, achieving a level of naturalness comparable to human speech and allowing for an increasingly expressive range of outputs ([Survey [1]](../../Surveys/2021.06.29_A_Survey_on_Neural_Speech_Synthesis_63P/_ToC.md); [VITS [2]](2021.06.11_VITS.md); [NaturalSpeech2 [3]](../Diffusion/2023.04.18_NaturalSpeech2.md); [StyleTTS2 [4]](../Speech_LLM/2023.06.13_StyleTTS2.md)).
 > Neural TTS systems can be categorized into two-stage and single-stage pipelines. 
 > Two-stage models convert phonemic features into acoustic features and then use a vocoder to generate waveforms. 
-> These models can suffer from error propagation and limitations due to their dependence on low-level features like mel-spectrograms \cite{glowtts, fastpitch, tacotron2}.
-> Single-stage models aim to address these issues by streamlining this process into an end-to-end framework \cite{vits, pmlr-v162-casanova22a, lee2022hierspeech}, but they may face oversmoothing, mispronunciations, and reduced flexibility due to the lack of explicit linguistic information and entangled latent representations \cite{lee2022hierspeech, choi2023nansy}.
+> These models can suffer from error propagation and limitations due to their dependence on low-level features like mel-spectrograms ([Glow-TTS [5]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [FastPitch [6]](../TTS2_Acoustic/2020.06.11_FastPitch.md); [Tacotron2 [7]](../TTS2_Acoustic/2017.12.16_Tacotron2.md)).
+> Single-stage models aim to address these issues by streamlining this process into an end-to-end framework ([VITS [2]](2021.06.11_VITS.md); [YourTTS [8]](2021.12.04_YourTTS.md); [HierSpeech [9]](2022.11.01_HierSpeech.md)), but they may face oversmoothing, mispronunciations, and reduced flexibility due to the lack of explicit linguistic information and entangled latent representations ([HierSpeech [9]](2022.11.01_HierSpeech.md); choi2023nansy).
 > Recent research combines the strengths of both approaches by using self-supervised learning (SSL) speech representations as intermediate elements in two-stage models \cite{choi2023nansy, wavthruvec, parrottts, comparative_study_ssl_tts}. 
 > These representations help improve word error rates, pronunciation of out-of-vocabulary words \cite{wavthruvec}, and robustness to noise \cite{zhu2023rep2wav}, leading to high-quality, natural speech often surpassing end-to-end models.
 >
 > In practice, end-user applications may need multiple voices. 
 > Collecting high quality speech data and building a TTS model for each target speaker/voice is a challenging problem. 
 > So, there has been a growing interest in zero-shot multi-speaker TTS systems which can synthesize speech in an unseen speaker's voice based on short reference samples. 
-> State-of-the-art models such as XTTS \cite{casanova2024xtts} and HierSpeech++~\cite{lee2023hierspeechbridginggapsemantic} demonstrate impressive quality and similarity to unseen speakers. 
+> State-of-the-art models such as [XTTS [15]](../Speech_LLM/2024.06.07_XTTS.md) and [HierSpeech++ [16]](../Speech_Neural_Codec/2023.11.21_HierSpeechpp.md) demonstrate impressive quality and similarity to unseen speakers. 
 > However, these models require end-to-end training on thousands of hours of transcribed audio data from a large number of speakers to generalize effectively.
 >
 > Simultaneously, kNN-VC \cite{baas23_interspeech} has emerged as a promising any-to-any voice conversion method, leveraging SSL features for zero-shot conversion. 
@@ -75,7 +75,7 @@
 > A waveform is finally generated from the converted features using a pre-trained vocoder. 
 > The only component that requires training is the Text-to-SSL model, which can be trained on transcribed data from a single speaker only. 
 > Furthermore, we introduce a linear interpolation parameter allowing for fine-grained control over the influence of the target style on the output.
-> We validate the approach by implementing the Text-to-SSL block using two different lightweight models, namely GlowTTS \cite{glowtts} and GradTTS \cite{pmlr-v139-popov21a-gradtts}. 
+> We validate the approach by implementing the Text-to-SSL block using two different lightweight models, namely [Glow-TTS [5]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md) and [GradTTS [21]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md). 
 > We train them on transcribed speech from a single speaker, and compare them with state-of-the-art zero-shot multi-speaker models using objective metrics and subjective listening tests. 
 > The code and trained models will be made public upon publication, demo samples are available at https://idiap.github.io/ssl-tts/
 >
@@ -128,7 +128,7 @@ $$
 > Each frame represents a 25ms window with a 20ms hop between frames. 
 > These features are pre-extracted and cached prior to training or inference, eliminating the need to load the WavLM model during training or synthesis, assuming the target speaker is known.
 >
-> **Text-to-SSL: We evaluate two Text-to-SSL implementations: GlowTTS \cite{glowtts} and GradTTS \cite{pmlr-v139-popov21a-gradtts}. 
+> **Text-to-SSL: We evaluate two Text-to-SSL implementations: [Glow-TTS [5]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md) and [GradTTS [21]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md). 
 > GlowTTS employs a non-autoregressive architecture with a transformer-based text encoder, a duration predictor, and a flow-based decoder \cite{kingma2018glow}. 
 > GradTTS follows a similar architecture but uses a diffusion-based decoder \cite{song2021scorebased}. 
 > These models, which were originally designed to predict mel-spectrograms, are trained to encode text inputs into WavLM features corresponding to a single speaker's speech. 
@@ -150,17 +150,17 @@ $$
 
 > We compare our models with the best performing open models for zero-shot multi-speaker TTS.
 >
-> YourTTS \cite{pmlr-v162-casanova22a} builds on VITS \cite{vits}, adding elements for multilingual training and zero-shot multi-speaker capabilities. 
+> [YourTTS [8]](2021.12.04_YourTTS.md) builds on [VITS [2]](2021.06.11_VITS.md), adding elements for multilingual training and zero-shot multi-speaker capabilities. 
 > It uses the H/ASP speaker encoder \cite{chung2020in}, pre-trained on the VoxCeleb2 dataset \cite{chung18b_interspeech}, to extract a speaker embedding from reference utterances. 
 > This embedding conditions the model's duration predictor, flow-based decoder, posterior encoder, and vocoder. 
 > YourTTS is trained end-to-end on 529 hours of multilingual transcribed data from over 1000 speakers.
 >
-> XTTS \cite{casanova2024xtts} features a Vector Quantised-Variational AutoEncoder (VQ-VAE) that encodes mel-spectrograms into discrete codes, a GPT-2 encoder that predicts these audio codes from text tokens, and a HiFi-GAN-based decoder. 
+> [XTTS [15]](../Speech_LLM/2024.06.07_XTTS.md) features a Vector Quantised-Variational AutoEncoder (VQ-VAE) that encodes mel-spectrograms into discrete codes, a GPT-2 encoder that predicts these audio codes from text tokens, and a HiFi-GAN-based decoder. 
 > The GPT-2 encoder is conditioned on speaker information using a Perceiver conditioner, which outputs 32 1024-dimensional embeddings from a mel-spectrogram. 
 > The decoder is also conditioned on a speaker embedding extracted using H/ASP. 
 > XTTS is trained end-to-end on 27,282 hours of transcribed speech data across 16 languages, including 14,513 hours of English speech.
 > 
-> HierSpeech++ \cite{lee2023hierspeechbridginggapsemantic} comprises a text-to-vec module and a hierarchical speech synthesizer. 
+> [HierSpeech++ [16]](../Speech_Neural_Codec/2023.11.21_HierSpeechpp.md) comprises a text-to-vec module and a hierarchical speech synthesizer. 
 > The text-to-vec module generates massively multilingual speech (MMS) representations \cite{pratap2024scaling} from text inputs and prosody prompts. 
 > The hierarchical speech synthesizer produces a waveform from MMS features and a style prompt. 
 > Prosody and voice style representations are extracted from reference mel-spectrograms using style encoders comprising 1D convolutional networks, a multi-head self-attention temporal encoder, and a linear projection. 
