--- a/Models/Speech_LLM/2024.01.25_VALL-T.md
+++ b/Models/Speech_LLM/2024.01.25_VALL-T.md
@@ -5,11 +5,11 @@
 
 - 标题: VALL-T: Decoder-Only Generative Transducer for Robust and Decoding-Controllable Text-to-Speech
 - 作者:
-  - 01 [Chenpeng Du](../../Authors/Chenpeng_Du.md)
-  - 02 [Yiwei Guo](../../Authors/Yiwei_Guo.md)
-  - 03 [Hankun Wang](../../Authors/Hankun_Wang.md)
-  - 04 [Yifan Yang](../../Authors/Yifan_Yang.md)
-  - 05 [Zhikang Niu](../../Authors/Zhikang_Niu.md)
+  - 01 [Chenpeng Du](../../Authors/Chenpeng_Du_(杜晨鹏).md)
+  - 02 [Yiwei Guo](../../Authors/Yiwei_Guo_(郭奕玮).md)
+  - 03 [Hankun Wang](../../Authors/Hankun_Wang_(王翰坤).md)
+  - 04 [Yifan Yang](../../Authors/Yifan_Yang_(杨亦凡).md)
+  - 05 [Zhikang Niu](../../Authors/Zhikang_Niu_(牛志康).md)
   - 06 [Shuai Wang](../../Authors/Shuai_Wang_(王帅).md)
   - 07 [Hui Zhang](../../Authors/Hui_Zhang.md)
   - 08 [Xie Chen](../../Authors/Xie_Chen_(陈谐).md)
