--- a/Models/TTS3_Vocoder/2024.06.12_FreeV.md
+++ b/Models/TTS3_Vocoder/2024.06.12_FreeV.md
@@ -46,7 +46,7 @@
 > Vocoders reconstruct speech waveforms from acoustic features and play a pivotal role in modern TTS systems.
 > Frequent-domain GAN vocoders like [Vocos](2023.03.01_Vocos.md) and [APNet2](2023.11.20_APNet2.md) have recently seen rapid advancements, outperforming time-domain models in inference speed while achieving comparable audio quality.
 > However, these frequency-domain vocoders suffer from large parameter sizes, thus introducing extra memory burden.
-> Inspired by [PriorGrad](2021.06.11_PriorGrad.md) and [SpecGrad](SpecGrad.md), we employ pseudo-inverse to estimate the amplitude spectrum as the initialization roughly.
+> Inspired by [PriorGrad](2021.06.11_PriorGrad.md) and [SpecGrad](2022.03.31_SpecGrad.md), we employ pseudo-inverse to estimate the amplitude spectrum as the initialization roughly.
 > This simple initialization significantly mitigates the parameter demand for vocoder.
 > Based on [APNet2](2023.11.20_APNet2.md) and our streamlined Amplitude prediction branch, we propose our ***FreeV***, compared with its counterpart [APNet2](2023.11.20_APNet2.md), our ***FreeV*** achieves 1.8$\times$ inference speed improvement with nearly half parameters.
 > Meanwhile, our ***FreeV*** outperforms [APNet2](2023.11.20_APNet2.md) in resynthesis quality, marking a step forward in pursuing real-time, high-fidelity speech synthesis.
@@ -58,7 +58,7 @@
 声码器从声学特征重建语音波形, 在现代文本转语音 (TTS) 系统中扮演着关键角色.
 频域 GAN 声码器，如 [Vocos](2023.03.01_Vocos.md) 和 [APNet2](2023.11.20_APNet2.md), 近期取得了迅速进展, 在保持音频质量相当的同时, 推理速度超过了时域模型.
 然而, 这些频域声码器存在参数规模大的问题, 从而增加了额外的内存负担.
-受 [PriorGrad](2021.06.11_PriorGrad.md) 和 [SpecGrad](SpecGrad.md) 的启发, 我们采用伪逆方法来大致估计幅度谱作为初始化.
+受 [PriorGrad](2021.06.11_PriorGrad.md) 和 [SpecGrad](2022.03.31_SpecGrad.md) 的启发, 我们采用伪逆方法来大致估计幅度谱作为初始化.
 这种简单的初始化显著减少了声码器的参数需求.
 基于 [APNet2](2023.11.20_APNet2.md) 和我们简化的幅度预测分支, 我们提出了 ***FreeV***, 与 [APNet2](2023.11.20_APNet2.md) 相比, 我们的 ***FreeV*** 实现了 1.8 倍的推理速度提升, 同时参数数量几乎减半.
 同时, 我们的 ***FreeV*** 在重合成质量上超越了 [APNet2](2023.11.20_APNet2.md), 标志着在追求实时高保真语音合成方面迈出了重要一步.
@@ -71,17 +71,17 @@
 > Within these contexts, the process typically involves a model that predicts a mel-spectrogram from the source text or speech, followed by a vocoder that produces the waveform from the predicted mel-spectrogram.
 > Consequently, the quality of the synthesized speech, the speed of inference, and the parameter size of the model constitute the three primary metrics for assessing the performance of neural vocoders.
 >
-> Recent advancements in vocoders, including [iSTFTNet [1]](2022.03.04_iSTFTNet.md), [Vocos [2]](2023.03.01_Vocos.md), and [APNet [3]](APNet.md), have shifted from the prediction of waveforms in the time domain to the estimation of amplitude and phase spectra in the frequency domain, followed by waveform reconstruction via inverse short-time Fourier transform (ISTFT).
+> Recent advancements in vocoders, including [iSTFTNet [1]](2022.03.04_iSTFTNet.md), [Vocos [2]](2023.03.01_Vocos.md), and [APNet [3]](2023.05.13_APNet.md), have shifted from the prediction of waveforms in the time domain to the estimation of amplitude and phase spectra in the frequency domain, followed by waveform reconstruction via inverse short-time Fourier transform (ISTFT).
 > This method circumvents the need to predict extensive time-domain waveforms, thus reducing the models' computational burden.
 > [iSTFTNet [1]](2022.03.04_iSTFTNet.md), for example, minimizes the computational complexity by decreasing the upsampling stages and focusing on frequency-domain spectra predictions before employing ISTFT for time-domain signal reconstruction.
 > [Vocos](2023.03.01_Vocos.md) extends these advancements by removing all upsampling layers and utilizing the [ConvNeXt V2 [4]](../_Basis/ConvNeXt_V2.md) Block as its foundational layer.
-> [APNet [3]](APNet.md) and [APNet2 [5]](2023.11.20_APNet2.md) further refine this approach by independently predicting amplitude and phase spectra and incorporating innovative supervision to guide phase spectra estimation.
+> [APNet [3]](2023.05.13_APNet.md) and [APNet2 [5]](2023.11.20_APNet2.md) further refine this approach by independently predicting amplitude and phase spectra and incorporating innovative supervision to guide phase spectra estimation.
 > Nonetheless, with comparable parameter counts, these models often underperform their time-domain counterparts, highlighting potential avenues for optimization in the parameter efficiency of frequency-domain vocoders.
 >
 > Several diffusion-based vocoders have integrated signal-processing insights to reduce inference steps and improve reconstruction quality.
 > [PriorGrad [6]](2021.06.11_PriorGrad.md) initially refines the model's priors by aligning the covariance matrix diagonals with the energy of each frame of the Mel spectrogram.
-> Extending this innovation, [SpecGrad [7]](SpecGrad.md) proposed to adjust the diffusion noise to align its dynamic spectral characteristics with those of the conditioning mel spectrogram.
-> Moreover, [GLA-Grad [8]](GLA-Grad.md) enhances the perceived audio quality by embedding the estimated amplitude spectrum into each diffusion step's post-processing stage.
+> Extending this innovation, [SpecGrad [7]](2022.03.31_SpecGrad.md) proposed to adjust the diffusion noise to align its dynamic spectral characteristics with those of the conditioning mel spectrogram.
+> Moreover, [GLA-Grad [8]](2024.02.09_GLA-Grad.md) enhances the perceived audio quality by embedding the estimated amplitude spectrum into each diffusion step's post-processing stage.
 > Nevertheless, the reliance on diffusion models results in slower inference speeds, posing challenges for their real-world application.
 >
 > In this work, we introduce ***FreeV***, a streamlined GAN vocoder enhanced with prior knowledge from signal processing, and tested on the [LJSpeech dataset [9]](../../Datasets/2017.07.05_LJSpeech.md).
@@ -98,8 +98,8 @@
 > Based on diffusion-based vocoder [WaveGrad [10]](2020.09.02_WaveGrad.md), which direct reconstruct the waveform through a DDPM process, Lee \textit{et al.} proposed [PriorGrad [6]](2021.06.11_PriorGrad.md) by introducing an adaptive prior $\mathcal{N}(\mathbf{0},\mathbf{\Sigma})$, where $\mathbf{\Sigma}$ is computed from input mel spectrogram $X$.
 > The covariance matrix $\mathbf{\Sigma}$ is given by: $\mathbf{\Sigma}=\mathrm{diag} [(\sigma_1^2,\sigma_2^2,\cdots,\sigma_D^2,)]$, where $\sigma_d^2,$ denotes the signal power at $d$th sample, which is calculated by interpolating the frame energy.  Compared to conventional DDPM-based vocoders, [PriorGrad](2021.06.11_PriorGrad.md) utilizes signal before making the source distribution closer to the target distribution, which simplifies the reconstruction task.
 >
-> Based on [PriorGrad](2021.06.11_PriorGrad.md), [SpecGrad [7]](SpecGrad.md) proposed adjusting the diffusion noise in a way that aligns its dynamic spectral characteristics with those of the conditioning mel spectrogram.
-> [SpecGrad](SpecGrad.md) introduced a decomposed covariance matrix and its approximate inverse using the idea from T-F domain filtering, which is conditioned on the mel spectrogram.
+> Based on [PriorGrad](2021.06.11_PriorGrad.md), [SpecGrad [7]](2022.03.31_SpecGrad.md) proposed adjusting the diffusion noise in a way that aligns its dynamic spectral characteristics with those of the conditioning mel spectrogram.
+> [SpecGrad](2022.03.31_SpecGrad.md) introduced a decomposed covariance matrix and its approximate inverse using the idea from T-F domain filtering, which is conditioned on the mel spectrogram.
 > This method enhances audio fidelity, especially in high-frequency regions.
 > We denote the STFT by a matrix $G$, and the ISTFT by a matrix $G^+$, then the time-varying filter $L$ can be expressed as:
 
@@ -109,14 +109,14 @@ $$
 
 > where $D$ is a diagonal matrix that defines the filter, and it is obtained from the spectral envelope.
 > Then we can obtain covariance matrix $\Sigma=LL^T$ of the standard Gaussian noise $\mathcal{N}(0,\Sigma)$ in the diffusion process.
-> By introducing more accurate prior to the model, [SpecGrad](SpecGrad.md) achieves higher reconstruction quality and inference speech than [PriorGrad](2021.06.11_PriorGrad.md).
+> By introducing more accurate prior to the model, [SpecGrad](2022.03.31_SpecGrad.md) achieves higher reconstruction quality and inference speech than [PriorGrad](2021.06.11_PriorGrad.md).
 
 ### APNet & APNet2
 
 > As illustrated in Figure~\ref{fig:overall}, [APNet2 [5]](2023.11.20_APNet2.md) consists of two components: amplitude spectra predictor (ASP) and phase spectra predictor (PSP).
 > These two components predict the amplitude and phase spectra separately, which are then employed to reconstruct the waveform through ISTFT.
 > The backbone of [APNet2](2023.11.20_APNet2.md) is [ConvNeXt V2 [4]](../_Basis/ConvNeXt_V2.md) block, which is proved has strong modeling capability.
-> In the PSP branch, [APNet [3]](APNet.md) proposed the parallel phase estimation architecture at the output end.
+> In the PSP branch, [APNet [3]](2023.05.13_APNet.md) proposed the parallel phase estimation architecture at the output end.
 > The parallel phase estimation takes the output of two convolution layers as the pseudo imaginary part $I$ and real part $R$, then obtains the phase spectra by:
 
 $$
@@ -144,7 +144,7 @@ $$
 $$
 
 > We investigated several existing implementations for this task.
-> In Section \ref{sec:specgrad}, the [SpecGrad](SpecGrad.md) method, $G^+DG\epsilon$ requires prior noise $\epsilon$ as input, therefore unsuitable for our goals.
+> In Section \ref{sec:specgrad}, the [SpecGrad](2022.03.31_SpecGrad.md) method, $G^+DG\epsilon$ requires prior noise $\epsilon$ as input, therefore unsuitable for our goals.
 > In the implementation by the librosa library, the estimation of $\hat{A}$ employs the Non-Negative Least Squares (NNLS) algorithm to maintain non-negativity.
 > However, this algorithm is slow due to the need for multiple iterations, prompting the pursuit of a swifter alternative.
 > TorchAudio's implementation calculates the estimated amplitude spectrum through a singular least squares operation followed by enforcing a minimum threshold to preserve non-negativity.
