--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -6,8 +6,8 @@
 - 标题: Language Model Can Listen While Speaking
 - 作者:
   - 01 [Ziyang Ma](../../Authors/Ziyang_Ma_(马子阳).md)
-  - 02 [Yakun Song](../../Authors/Yakun_Song.md)
-  - 03 [Chenpeng Du](../../Authors/Chenpeng_Du.md)
+  - 02 [Yakun Song](../../Authors/Yakun_Song_(宋雅昆).md)
+  - 03 [Chenpeng Du](../../Authors/Chenpeng_Du_(杜晨鹏).md)
   - 04 [Jian Cong](../../Authors/Jian_Cong.md)
   - 05 [Zhuo Chen](../../Authors/Zhuo_Chen_(陈卓).md)
   - 06 [Yuping Wang](../../Authors/Yuping_Wang.md)
@@ -95,7 +95,7 @@
 > Leveraging techniques from text LLMs, the speech language model (SLM) processes speech similarly to text. 
 > This paradigm involves encoding the speech signal into discrete tokens or continuous embeddings, modeling them with a language model, and decoding the speech tokens or embeddings back to the speech signal.
 > Some studies ([GSLM [19]](2021.02.01_GSLM.md); [pGSLM [17]](2021.09.07_pGSLM.md); [dGSLM [26]](2022.03.30_dGSLM.md)) utilizes this paradigm for speech continuation, generating expressive speech and natural multi-round dialogue. 
-> Other research employs this paradigm to task-specific applications, such as decoder-only high-fidelity TTS ([VALL-E [40]](2023.01.05_VALL-E.md); [AudioLM [03]](2022.09.07_AudioLM.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.04_CosyVoice.md)) and decoder-only streaming ASR ([Speech ReaLLM [33]](2024.06.13_Speech_ReaLLM.md); [Tsunoo et al.[38]](../ASR/2024.06.23_Decoder-only_Architecture_for_Streaming_E2E_Speech_Recognition.md); [Chen et al.[04]](../ASR/2024.06.27_Streaming_Decoder-Only_ASR_with_Discrete_Speech_Units.md); [BESTOW [08]](2024.06.28_BESTOW.md))
+> Other research employs this paradigm to task-specific applications, such as decoder-only high-fidelity TTS ([VALL-E [40]](2023.01.05_VALL-E.md); [AudioLM [03]](2022.09.07_AudioLM.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.07_CosyVoice.md)) and decoder-only streaming ASR ([Speech ReaLLM [33]](2024.06.13_Speech_ReaLLM.md); [Tsunoo et al.[38]](../ASR/2024.06.23_Decoder-only_Architecture_for_Streaming_E2E_Speech_Recognition.md); [Chen et al.[04]](../ASR/2024.06.27_Streaming_Decoder-Only_ASR_with_Discrete_Speech_Units.md); [BESTOW [08]](2024.06.28_BESTOW.md))
 > Moreover, [SpeechGPT [48]](2023.05.18_SpeechGPT.md) and [LauraGPT [05]](2023.10.07_LauraGPT.md) initialize SLMs using LLMs, expanding speech tokens to the LLM vocabulary and continuing training on speech.
 > This empowers SLM to comprehend semantic information and equips SLM with dialogue capability. 
 > Despite these advances, all these models are limited to turn-based conversations and cannot handle real-time sound or interruptions, limiting their applicability in real-life scenarios. 
@@ -144,7 +144,7 @@
 这一范式涉及将语音信号编码为离散 Token 或连续嵌入, 用语言模型对其建模, 并将语音 Token 或嵌入解码回语音信号.
 - 一些研究 ([GSLM [19]](2021.02.01_GSLM.md); [pGSLM [17]](2021.09.07_pGSLM.md); [dGSLM [26]](2022.03.30_dGSLM.md)) 利用这一范式进行语音续写, 生成富有表现力的语音和自然的多轮对话.
 - 其他研究则采用这一范式进行特定任务的应用, 如
-  - 基于仅解码器架构的高保真文本转语音 ([VALL-E [40]](2023.01.05_VALL-E.md); [AudioLM [03]](2022.09.07_AudioLM.md)；[Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.04_CosyVoice.md));
+  - 基于仅解码器架构的高保真文本转语音 ([VALL-E [40]](2023.01.05_VALL-E.md); [AudioLM [03]](2022.09.07_AudioLM.md)；[Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.07_CosyVoice.md));
   - 仅解码器的流式自动语音识别 ([Speech ReaLLM [33]](2024.06.13_Speech_ReaLLM.md); [Tsunoo et al. [38]](../ASR/2024.06.23_Decoder-only_Architecture_for_Streaming_E2E_Speech_Recognition.md); [Chen et al. [04]](../ASR/2024.06.27_Streaming_Decoder-Only_ASR_with_Discrete_Speech_Units.md); [BESTOW [08]](2024.06.28_BESTOW.md)).
 - 此外, [SpeechGPT [48]](2023.05.18_SpeechGPT.md) 和 [LauraGPT [05]](2023.10.07_LauraGPT.md) 使用 LLM 初始化 SLM, 将语音 Token 扩展到 LLM 词汇表, 并在语音上继续训练.
   这使得 SLM 能够理解语义信息, 并赋予 SLM 对话的能力.
