--- a/Models/Speech_LLM/2024.01.14_ELLA-V.md
+++ b/Models/Speech_LLM/2024.01.14_ELLA-V.md
@@ -5,7 +5,7 @@
 
 - 标题: ELLA-V: Stable Neural Codec Language Modeling with Alignment-guided Sequence Reordering
 - 作者:
-  - 01 [Yakun Song](../../Authors/Yakun_Song.md)
+  - 01 [Yakun Song](../../Authors/Yakun_Song_(宋雅昆).md)
   - 02 [Zhuo Chen](../../Authors/Zhuo_Chen_(陈卓).md)
   - 03 [Xiaofei Wang](../../Authors/Xiaofei_Wang_(王晓飞).md)
   - 04 [Ziyang Ma](../../Authors/Ziyang_Ma_(马子阳).md)
