--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -83,6 +83,28 @@
 
 ## 1.Introduction: 引言
 
+> Text-to-Speech synthesis (TTS) endeavors to synthesize speech that is both intelligible and natural at a human level, a field that has witnessed significant advancements over the past few years due to the proliferation of deep learning technologies \cite{tecatron2,fastspeech2,vits,glow-tts,grad-tt,transformer-tts,ns1}. These TTS models have successfully synthesized speech that is not only intelligible but also of high quality, albeit generally limited to specific styles, speakers, and languages. This limitation primarily stems from the fact that they are trained on small-scale, high-quality, labeled speech datasets.
+> At a high level of modeling, previous TTS models are usually categorized into two types: auto-regressive (AR) and non-auto-regressive (NAR) models. Generally, NAR-based models outperform AR-based models in terms of generation speed and robustness \cite{fastspeech2}. However, AR-based models exhibit superior diversity, prosody, expressiveness, and flexibility, attributable to their implicit duration modeling and AR sampling strategy \cite{tecatron2}. Furthermore, many NAR-based models \cite{fastspeech2} depend on fine-grained alignment information (phoneme-level duration), which complicates data pre-processing. Although numerous studies \cite{grad-tt,glow-tts,vits} have suggested employing the Monotonic Alignment Search (MAS) strategy to learn alignment information, this approach not only increases training complexity but also results in alignments that may not always be suitable. Most critically, the rigid boundary between phoneme and speech representation can lead to unnatural prosody \cite{seedtss}.
+>
+> Recently, an increasing number of researchers have concentrated on synthesizing diverse and natural speech, particularly focusing on the diversity of speaking styles, achieving human-level naturalness, and zero-shot speaker cloning. To achieve these objectives, they propose utilizing large-scale datasets to train Text-to-Speech (TTS) models \cite{borsos2023audiolm,valle,speartts,uniaudio,make-a-voice}.
+> For example, language model (LM)-based TTS systems, such as VALL-E \cite{valle}, employ a pre-trained audio codec model (Encodec \cite{encodec}) to convert the speech signal into a sequence of discrete tokens. Subsequently, an auto-regressive (AR) language model is trained to predict these speech tokens based on phonemes and speaker prompts. LM-based TTS models streamline data pre-processing, and their structure and training strategies draw from the successes of large language models in natural language processing (NLP) \cite{llama2,gpt4}. Moreover, these models are capable of generating expressive and diverse speech, thanks to their implicit duration modeling and sampling strategy. However, they suffer from slow and unstable generation due to the nature of AR sampling. To mitigate these drawbacks, large-scale non-autoregressive (NAR) models \cite{soundstorm,ns2,voicebox,megatts} have been proposed, such as NaturalSpeech 2/3. Although NAR-based large-scale TTS models exhibit higher inference speeds and enhanced stability, they require extra effort in data pre-processing, such as using their internal alignment tools to secure the alignment between speech and phonemes \cite{ns2,ns3}. Additionally, the persistent issue of hard boundary alignment continues to limit the natural prosody in NAR-based models \cite{seedtss}. We summarize the strengths and potential weaknesses for current AR-based and NAR-based large-scale TTS models in Table \ref{tab1}. We can see that both AR-based and NAR-based large TTS models still have considerable room for improvement in terms of performance, efficiency, or data requirements. Consequently, the primary research question is \textbf{whether we can develop a simple, efficient, and stable TTS system capable of synthesizing diverse, natural, and controllable speech}.
+>
+> Considering the complexity and long sequence of the speech signal, most large TTS models use a speech tokenizer \footnote{In this study, we refer to the intermediate representation extractor as a speech tokenizer. In the audio field, the speech tokenizer can be a codec model or Variational Auto Encoder (VAE).} to extract the intermediate representation from speech, \textit{e.g.} discrete tokens of audio codec model \cite{valle,uniaudio} or continuous embeddings from VAE models \cite{ns2}, then applying generative models on the intermediate representation. However, previous models pay more attention to improving the performance of TTS systems by scaling the training data and model size. The research about the influence of speech tokenizers on the TTS models is scarce. In other words, previous works tell us how to utilize a pre-trained speech tokenizer for large TTS systems, but do not disclose what is the most suitable speech tokenizer for TTS systems. We think the speech tokenizer is a key point for the success of large TTS models. Thus, the second research problem is \textbf{what is a good speech tokenizer for large TTS models}. In this study, we propose to focus on two aspects of the speech tokenizer: 
+> - Completeness: The speech tokenizer should recover the compressed speech without loss.
+> - Compactness: The speech tokenizer should encode the speech into fewer parameters or a smaller space.
+>
+> In Section \ref{sub:good tokenizer}, we first give a comprehensive performance comparison for different speech tokenizers, including our proposed SQ-Codec, Encodec, and Variational Auto Encoder (VAE). Then we give a detailed analysis of the influence of completeness and compactness on speech generation. 
+>
+> Large-scale datasets are crucial for the development of advanced Text-to-Speech (TTS) systems \cite{valle,ns2,ns3,uniaudio,voicebox,voicecraft}. While prior studies have demonstrated that large-scale Automatic Speech Recognition (ASR) datasets can be employed to train TTS systems, the details of obtaining text-speech pairs are usually neglected. In this study, we utilize publicly available ASR models (Whisper \cite{whisper}), to generate the transcriptions. However, these transcriptions may be inaccurate and are thus considered noisy labels. The third research question we address is: \textbf{Can a dataset comprising noisy labels effectively train a high-quality TTS system?} In Section \ref{sec:cfc}, we give a theoretical analysis that when a large-scale dataset includes a small number of noisy labels, which is equal to introducing the classifier-free guidance training \cite{cfc} for the model optimization.
+>
+> Our contributions can be summarized as follows:
+> - We introduce SimpleSpeech 2, a simple and efficient NAR framework for text-to-speech, building upon our previous work \cite{simplespeech}. This framework effectively combines the advantages of current AR-based and NAR-based models. 
+> - We conduct a comprehensive series of contrast experiments to explore the impact of different tokenizers on TTS systems, and investigate the influence of completeness and compactness of speech tokenizer for TTS performance.
+> - We explore the influence of sentence duration predictor, and show 4 distinct duration predictors.
+> - We propose a novel flow-based scalar transformer diffusion model that is faster and more stable than the previous DDPM-based diffusion \cite{simplespeech}. Furthermore, we also introduce an advanced transformer backbone from large language models, \textit{e.g.} time mixture-of-experts.
+>
+> The rest of this paper is organized as follows: In Section 2, we motivate our study by introducing the background and related work. In Section~\ref{sec4:Proposed method}, we introduce the details of our proposed methods. The experimental setting, evaluation metrics, and results are presented from Section~\ref{sec:exp set} to Section~\ref{exp: experiments}. The study is concluded in Section~\ref{sec:conclusion}.
+
 ## 2.Related Works: 相关工作
 
 ## 3.Methodology: 方法
