--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -107,12 +107,20 @@
 
 ## 2.Related Works: 相关工作
 
-### Speech Tokenizer
+### 2.1.Speech Tokenizer
 
 > In this study, we define an \textit{audio/speech tokenizer} as a model that maps complex audio data into a latent space (latent representation), which can subsequently be reconstructed from this latent space back into audio. The latent representation may take the form of either discrete tokens or continuous vectors. Within the existing literature, the concept of an audio tokenizer has been extensively investigated \cite{yang2023hifi,encodec,soundstream,dac,make-an-audio}. These studies generally fall into two categories: Audio Codecs and Variance AutoEncoders (VAEs). Audio Codecs aim to quantize audio data into a set of discrete tokens, whereas VAEs are designed to model the mean and variance distributions of audio data.
 >
 > Although audio codec models have been widely used in audio generation tasks, they face the problem of codebook collapse and need complex training loss combinations. Furthermore, the audio codec quantizes each speech frame into multiple tokens with RVQ, this will ensure high-quality audio reconstruction but will cause difficulty in autoregressive model generation \cite{valle,speartts} (error propagation and robust issues) due to the increased length of the token sequence. The VAE model or the continuous representations from audio codec are also can be used as the prediction target of generative models. For instance, previous works \cite{ns2,ditto-tts} follow the Latent Diffusion Model (LDM) \cite{ldm} to train a diffusion model to fit the distribution of continuous representations. However, developing a good VAE model also requires balancing the variance level with the reconstruction performance. A typical example is that data compressed with AE might reconstruct better than those with VAE, but the complexity retained in the compressed data distribution still poses challenges for the generative model. Thus, current VAE models in the audio and image generation fields imposes a slight Kullback-Leibler (KL) penalty towards a standard normal on the learned latent \cite{ldm,make-an-audio}. 
 > In this study, we propose to use scalar quantization to replace the Residual Vector Quantization (RVQ) in previous audio codec works, named SQ-Codec. We demonstrate that SQ-Codec not only achieves good reconstruction performance but also provides a finite, compact latent space, which is highly suitable for generative models.
+
+### 2.2.Large-Scale Text-To-Speech
+
+> Large-scale text-to-speech (TTS) research has made significant strides. These methods can be divided into two categories: autoregressive (AR) TTS based on large language models (LLMs) and non-autoregressive (NAR) TTS. AR-based TTS models got great attention, for instance, AudioLM \cite{borsos2023audiolm}, VALL-E \cite{valle}, SpearTTS \cite{speartts}, VoiceCraft \cite{voicecraft}, and UniAudio \cite{uniaudio} use audio codec (\textit{e.g.} Encodec \cite{encodec} or SoundStream \cite{soundstream}) for mapping speech to tokens, framing text-to-speech tasks as AR language modeling tasks, thus enabling zero-shot capabilities in the speech domain. AR-based TTS models are easy to train because they only rely on speech-transcription pairs data, but they also face the problem of slow generation speed and unstable generation quality. To improve its robustness, VALLE-R \cite{valle-r}, RALL-E \cite{rall-e} proposes to use more alignment information (\textit{e.g} phone duration) in the training stage, but such strategy also increases the difficulty of data preparation. 
+>
+> The other type relies on NAR generative models, for instance, NaturalSpeech 2 \cite{ns2} proposes to model the continuous representation of the audio codec model by latent diffusion models. NaturalSpeech 2 is an NAR-based model, which has faster generation speed and better robustness than previous AR-based models. NaturalSpeech 3 \cite{ns3} proposes to encode different attributes (\textit{e.g.} content and prosody) into different codebooks, then applying discrete diffusion models \cite{diffsound,soundstorm,yang2024instructtts} on them. One of the drawbacks in NaturalSpeech 2/3 is that the system training needs fine-grained alignment information (\textit{e.g.} phone-level duration), which significantly hinders the use of large-scale in the wild data. Furthermore, the hard boundary alignment between phoneme and speech representation may result in unnatural prosody. Similarly, Voicebox \cite{voicebox} and Audiobox \cite{audiobox} propose a pre-training and fine-tuning strategy based on flow matching \cite{flow-matching}. HierSpeech ++ \cite{hierspeech++} proposes a hierarchical variational inference method. E3-TTS proposes to generate fixed-length audio based on text using diffusion models without any duration information, which significantly simplifies the data preparation for NAR TTS training. However, the fixed length generation also limits the flexibility of the model. Our recent publication SimpleSpeech \cite{simplespeech} proposes to use a sentence duration to control the length of audio, and we demonstrate that the sentence duration is a effective way for NAR TTS. In this study, we follow the line of our previous publication SimpleSpeech uses sentence duration to control the speech length. In addition, we investigate more strategies to obtain the sentence duration, refer to Section \ref{sec:sentence duration} to find the details. 
+>
+> We notice that some concurrent works, SeedTTS \cite{seedtss} and DiTTo-TTS \cite{ditto-tts} also adopt a similar idea to use the sentence duration to control the generated speech length in an NAR framework. We claim that our study is one of the earliest works to adopt this idea, and our proposed method is different from theirs.
 
 ## 3.Methodology: 方法
 
